--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
     "inspect": "node --inspect -r ts-node/register src/app.ts"
   },
   "dependencies": {
+    "@elastic/elasticsearch": "^7.12.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1",
+    "fastify": "^3.16.2",
+    "isomorphic-fetch": "^3.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.5",
     "node-fetch": "^2.6.1",
+    "node-schedule": "^2.0.0",
     "redis": "^3.1.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
@@ -26,7 +29,7 @@
   },
   "name": "hedo2.shop.search",
   "description": "",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "main": "src/app.ts",
   "repository": {
     "type": "git",
