--- a/package.json
+++ b/package.json
@@ -1,14 +1,16 @@
 {
   "scripts": {
-    "watch": "tsc -w",
+    "watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/app.ts\"",
     "start": "ts-node src/app.ts",
     "inspect": "node --inspect -r ts-node/register src/app.ts"
   },
   "dependencies": {
     "@elastic/elasticsearch": "^7.12.0",
+    "@types/fastify-cors": "^2.1.0",
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "fastify": "^3.16.2",
+    "fastify-cors": "^6.0.2",
     "isomorphic-fetch": "^3.0.0",
     "module-alias": "^2.2.2",
     "mongoose": "^5.12.5",
@@ -29,7 +31,7 @@
   },
   "name": "hedo2.shop.search",
   "description": "",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "main": "src/app.ts",
   "repository": {
     "type": "git",
