--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "colors": "^1.4.0",
     "dotenv": "^8.2.0",
     "fastify": "^3.16.2",
+    "fastify-compress": "^3.6.0",
     "fastify-cors": "^6.0.2",
     "isomorphic-fetch": "^3.0.0",
     "module-alias": "^2.2.2",
@@ -31,7 +32,7 @@
   },
   "name": "hedo2.shop.search",
   "description": "",
-  "version": "1.2.0",
+  "version": "1.3.0",
   "main": "src/app.ts",
   "repository": {
     "type": "git",
