--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "watch": "nodemon --watch \"src/**\" --ext \"ts,json\" --ignore \"src/**/*.spec.ts\" --exec \"ts-node src/app.ts\"",
     "start": "ts-node src/app.ts",
     "inspect": "node --inspect -r ts-node/register src/app.ts",
-    "docker:build": "docker build . -t hedo2.shop.search && docker tag hedo2.shop.search:latest 493725010520.dkr.ecr.eu-central-1.amazonaws.com/hedo2.shop.search:latest",
-    "docker:run": "docker run -d -p $p:$p --env-file .docker.env hedo2.shop.search",
-    "docker:push": "docker push 493725010520.dkr.ecr.eu-central-1.amazonaws.com/hedo2.shop.search:latest"
+    "docker:build": "docker buildx build . --platform=linux/amd64 -t hedo2.shop.search:latest",
+    "docker:run": "docker run -d -p $p:$p --env-file .docker.env hedo2.shop.search:latest",
+    "docker:push": "docker tag hedo2.shop.search:latest 493725010520.dkr.ecr.eu-central-1.amazonaws.com/hedo2.shop.search:latest && docker push 493725010520.dkr.ecr.eu-central-1.amazonaws.com/hedo2.shop.search:latest"
   },
   "dependencies": {
     "@sergei-gaponik/hedo2.lib.models": "git+https://sergei-gaponik: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@github.com/sergei-gaponik/hedo2.lib.models",
@@ -40,7 +40,7 @@
   },
   "name": "hedo2.shop.search",
   "description": "",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "main": "src/app.ts",
   "repository": {
     "type": "git",
